--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
     </style>
     
-<!-- Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -37,11 +37,13 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '562889575024488');
+  fbq('init', '385810316599666');
+  fbq('init', '602605731151338');
+  fbq('init', '859721771671086');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=562889575024488&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=385810316599666&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
@@ -56,15 +58,15 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>Essa Simples Vitamina de 6 Ingredientes Mudou a Vida da Minha Esposa...</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62595415a95eb80009cf0f4c">var s=document.createElement("script");s.src="https://cdn.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/players/62595415a95eb80009cf0f4c/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_62c224bc6141ea0009867c55" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62c224bc6141ea0009867c55" src="https://images.converteai.net/d318d99a-86b9-407a-a636-d37b2ba9050f/players/62c224bc6141ea0009867c55/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62c224bc6141ea0009867c55" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62c224bc6141ea0009867c55">var s=document.createElement("script");s.src="https://scripts.converteai.net/d318d99a-86b9-407a-a636-d37b2ba9050f/players/62c224bc6141ea0009867c55/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/Ai11Mvg" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO MUDAR DE VIDA!</span>
+              <a href="https://pay.kiwify.com.br/OiGy5Xh" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
@@ -440,8 +442,8 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/Ai11Mvg" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO MUDAR DE VIDA!</span>
+              <a href="https://pay.kiwify.com.br/OiGy5Xh" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
             </div>
@@ -455,7 +457,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1293000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1272500); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
