--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         background-blend-mode: darken;
       }
     </style>
+   
+<link rel="preload" href="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/62e0b75c9896f0000a0c38cb/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
     
     <!-- Meta Pixel Code -->
 <script>
@@ -38,8 +47,6 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '385810316599666');
-  fbq('init', '602605731151338');
-  fbq('init', '859721771671086');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
