--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
     </style>
     
-<link rel="prerender" href="link do checkout"/>   
+<link rel="prerender" href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48"/>   
 <link rel="preload" href="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
 <link rel="preload" href="https://images.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/thumbnail.jpg" as="image">
@@ -73,7 +73,7 @@ src="https://www.facebook.com/tr?id=432349348482080&ev=PageView&noscript=1"
             
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/OiGy5Xh" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -450,7 +450,7 @@ src="https://www.facebook.com/tr?id=432349348482080&ev=PageView&noscript=1"
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/OiGy5Xh" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
