--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ src="https://www.facebook.com/tr?id=432349348482080&ev=PageView&noscript=1"
           <div class="col-lg-8">
             <div class="fb-comments" style="margin-top: 5px;">
               <div class="fb-comments-header">
-                <span>21 comentarios</span>
+                <span>Mostrando 21 de 85 comentarios</span>
               </div>
               <div class="fb-comments-wrapper" id="2">
                 <table class="fb-comments-comment">
