--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
     
 <link rel="prerender" href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48"/>   
+<link rel="prerender" href="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/embed.html">
 <link rel="preload" href="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
 <link rel="preload" href="https://images.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/thumbnail.jpg" as="image">
@@ -71,7 +72,7 @@ src="https://www.facebook.com/tr?id=432349348482080&ev=PageView&noscript=1"
 
             <!-- VSL -->
             
-          <div id="vid_62e0b7bcc0e469000aa6d90d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62e0b7bcc0e469000aa6d90d" src="https://images.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62e0b7bcc0e469000aa6d90d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62e0b7bcc0e469000aa6d90d">var s=document.createElement("script");s.src="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/player.js",s.async=!0,document.head.appendChild(s);</script>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/8987c970-76c3-4782-bc4a-896e7a1bce03/players/62e0b7bcc0e469000aa6d90d/embed.html" id="ifr_62e0b7bcc0e469000aa6d90d" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
   
             <br>
              <div id="viewers">
