--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ response.city
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Só digo uma coisa... FAÇAM! Vocês vão amar, já estou contando para todo mundo aqui de <span id="address" style="color:#000000;"></span></td>
+                      <td class="fb-comments-comment-text">Só digo uma coisa... FAÇAM! Vocês vão amar, já estou contando para todo mundo aqui de <span id="address" style="color:#000000;">Salvador</span>... </td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
