--- a/index.html
+++ b/index.html
@@ -113,15 +113,8 @@ src="https://www.facebook.com/tr?id=432349348482080&ev=PageView&noscript=1"
     
     <!--INÍCIO DO SCRIPT-->
 
-<script src="
-https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js
-"></script>
-
-<script>$.get("
-https://ipinfo.io/json
-", function (response) { $("#address").html(
-response.city
-);
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>$.get("https://ipinfo.io/json", function (response) { $("#address").html(response.city);
 }, "jsonp");
 </script>
 
