--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ urlKiwi='https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48'+'&utm_source='+$_GET['
             <div id="cta1" class="mt-4 d-none">
               <a id="kiwify1" href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+                <span class="span-btn2">(adicionar ao carrinho)</span>
               </a>
             </div>
           </div>
@@ -516,7 +516,7 @@ urlKiwi='https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48'+'&utm_source='+$_GET['
             <div id="cta2" class="mt-4 d-none">
               <a id="kiwify2" href="https://pay.kiwify.com.br/OiGy5Xh?afid=CoHc3o48" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+                <span class="span-btn2">(adicionar ao carrinho)</span>
               </a>
             </div>
           </div>
