--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>MUUV SÂO CARLOS</title>
     
     <style type="text/css">
       header {
         color: white;
-        background-image: url("assets/img/bg.jpeg");
+        background-image: url("assets/img/bg.jpe");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
