--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
-            <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src=
+            <!-- Imagem Headline -->
 
             <!-- Headline -->
             <h3 class="my-4"><b>Ganhe Mais Tempo para o que Realmente Importa!</b></h3>
