--- a/pgtwo/index.html
+++ b/pgtwo/index.html
@@ -17,7 +17,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protocolozer0barriga.com.br/">CONTINUAR</a>
+          <a class="btn" href="https://muuv.store/">CONTINUAR</a>
         </div>
       </div>    
     </div>
