--- a/pgt/index.html
+++ b/pgt/index.html
@@ -123,7 +123,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://protomarrom.online/"
+      location.href = "https://muuv.store/"
     }
   </script>
 </body>
