--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
            /* CSS para preencher toda a tela */
       html, body {
-        height: 100%;
+        height: 100vh;
         margin: 0;
       }
     </style>
